# dynamic-proxy

./: Cargo.toml  README.md  build.rs  config.example.toml  config.toml  docker-compose.yml
examples/: basic_usage.rs  enhanced_demo.rs  graceful_shutdown_demo.rs  test_client.rs
scripts/: README.md  demo.sh  setup_redis_backends.sh  test_enhanced_features.sh  test_graceful_shutdown.sh
scripts/demo/: demo.sh  run_basic_demo.sh  run_enhanced_demo.sh  run_graceful_shutdown_demo.sh
scripts/test/: basic_test.sh  run_test_client.sh  test_fixes.sh
src/: config.rs  health.rs  lib.rs  main.rs  metrics.rs  reload.rs  shutdown.rs
src/config/: settings.rs
src/monitoring/: logger.rs  metrics.rs  mod.rs
src/proxy/: mod.rs  tcp.rs  tcp_proxy.rs  tls_handler.rs  udp.rs  udp_proxy.rs
src/router/: manager.rs  mod.rs
src/router/plugins/: hash.rs  least_connections.rs  mod.rs  random.rs  round_robin.rs  weighted.rs
src/routing/: mod.rs  plugin.rs  redis_backend.rs  rules.rs
