[package]
name = "dynamic-proxy"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
prometheus = "0.14.0"
redis = { version = "0.32.0", features = ["aio", "tokio-comp"] }
rustls = { version = "0.23.27", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
warp = "0.3"
rand = "0.8"
regex = "1.0"
thiserror = "1.0"

[build-dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
